Adjusted tests